feat: refactor lesson and vocabulary relationships; update lesson deletion logic and add inactive status